[gd_scene load_steps=14 format=3 uid="uid://cdwte7f6l3kjt"]

[ext_resource type="Script" path="res://Scripts/ghost.gd" id="1_ly0sh"]
[ext_resource type="Shader" path="res://Shaders/ghost.gdshader" id="2_blqpq"]
[ext_resource type="PackedScene" uid="uid://wnxqxsr7fcwb" path="res://Scenes/Particles/baseFloatParticle.tscn" id="2_lragd"]
[ext_resource type="Material" uid="uid://xf0ee7yrnp6u" path="res://Scenes/Particles/baseFloatParticle.tres" id="3_kjvfp"]
[ext_resource type="PackedScene" uid="uid://bmtkidpm0bjfa" path="res://Scenes/hurt_box.tscn" id="3_r7y4v"]

[sub_resource type="Gradient" id="Gradient_4cqmc"]
offsets = PackedFloat32Array(0.0909091, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_jeq60"]
gradient = SubResource("Gradient_4cqmc")
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.174312, 0.431193)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_764i6"]
resource_local_to_scene = true
shader = ExtResource("2_blqpq")
shader_parameter/intensity = 0.0

[sub_resource type="Theme" id="Theme_0wvfr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7aiqd"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.247059, 0.541176, 0.215686, 1)

[sub_resource type="Theme" id="Theme_r4qaj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v6pcl"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iysp7"]
bg_color = Color(0.0823529, 0.713726, 0.72549, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="Ghost" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 2
script = ExtResource("1_ly0sh")
ghost_damage = -20

[node name="FloatParticle" parent="." instance=ExtResource("2_lragd")]
process_material = ExtResource("3_kjvfp")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(5.96046e-08, 16)
scale = Vector2(0.46875, 0.21875)
texture = SubResource("GradientTexture2D_jeq60")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_764i6")
region_enabled = true
region_rect = Rect2(288, 32, 32, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="HurtBox" parent="." instance=ExtResource("3_r7y4v")]

[node name="SelectArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SelectArea"]
debug_color = Color(0.235294, 0.611765, 0.513726, 0.419608)

[node name="Panel" type="Panel" parent="."]
visible = false
custom_minimum_size = Vector2(20, 20)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -17.0
offset_right = 16.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_0wvfr")
theme_override_styles/panel = SubResource("StyleBoxFlat_7aiqd")

[node name="BoxContainer" type="BoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="EnergyBar" type="ProgressBar" parent="BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_r4qaj")
theme_override_styles/background = SubResource("StyleBoxFlat_v6pcl")
theme_override_styles/fill = SubResource("StyleBoxFlat_iysp7")
step = 1.0
value = 50.0
show_percentage = false

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
scale = Vector2(7.6, 6.6)

[connection signal="mouse_entered" from="SelectArea" to="." method="targetted"]
[connection signal="mouse_exited" from="SelectArea" to="." method="untargetted"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]

[editable path="HurtBox"]
